trying to fix overflow on x

--- a/src/styles/LinkInBio.module.css
+++ b/src/styles/LinkInBio.module.css
@@ -25,14 +25,15 @@ div.LinkInBio {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 0.5rem;
 
     a {
       text-decoration: none;
       color: #ffffff;
       font-weight: 600;
-      font-size: 1.25rem;
-      margin: 0.5rem 0;
-      padding: 0.75rem 1.5rem;
+      font-size: 1.1rem;
+      /* margin: 0.5rem 0; */
+      padding: 0.5rem 1rem;
       border: 2px solid #ffffff;
       background-color: hsla(0, 0%, 100%, 0.25);
       border-radius: 2rem;
